--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Test content to verify page loading -->
+    <div style="position: fixed; top: 10px; right: 10px; background: red; color: white; padding: 10px; z-index: 9999;">
+      Hello World - Page Loading Test
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
