Add SEO optimization: robots.txt, sitemap.xml, and enhanced meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大师持仓追踪</title>
+    <title>大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化</title>
+    <meta name="description" content="专业追踪投资大师巴菲特和李录的美股持仓变化，基于SEC 13F报告提供实时数据分析和AI智能摘要，帮助投资者了解大师投资策略。">
+    <meta name="keywords" content="巴菲特持仓,李录投资,美股持仓,SEC 13F,投资追踪,股票分析,价值投资">
+    <meta name="author" content="大师持仓追踪">
+    <meta property="og:title" content="大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化">
+    <meta property="og:description" content="专业追踪投资大师巴菲特和李录的美股持仓变化，基于SEC 13F报告提供实时数据分析。">
+    <meta property="og:url" content="https://www.guruholdings.net/">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="zh_CN">
+    <link rel="canonical" href="https://www.guruholdings.net/">
+    <meta name="robots" content="index, follow">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
