--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化</title>
+    <title>大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化111111111111</title>
     <meta name="description" content="专业追踪投资大师巴菲特和李录的美股持仓变化，基于SEC 13F报告提供实时数据分析和AI智能摘要，帮助投资者了解大师投资策略。">
     <meta name="keywords" content="巴菲特持仓,李录投资,美股持仓,SEC 13F,投资追踪,股票分析,价值投资">
     <meta name="author" content="大师持仓追踪">
