fix: default to english and show language selector

--- a/index.html
+++ b/index.html
@@ -1,367 +1,26 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化</title>
-    <meta name="description" content="专业追踪投资大师巴菲特和李录的美股持仓变化，基于SEC 13F报告提供实时数据分析和AI智能摘要，帮助投资者了解大师投资策略。">
-    <meta name="keywords" content="巴菲特持仓,李录投资,美股持仓,SEC 13F,投资追踪,股票分析,价值投资">
-    <meta name="author" content="大师持仓追踪">
-    <meta property="og:title" content="大师持仓追踪 - 追踪巴菲特和李录的投资持仓变化">
-    <meta property="og:description" content="专业追踪投资大师巴菲特和李录的美股持仓变化，基于SEC 13F报告提供实时数据分析。">
-    <meta property="og:url" content="https://www.guruholdings.net/">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="zh_CN">
-    <link rel="canonical" href="https://www.guruholdings.net/">
-    <meta name="robots" content="index, follow">
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f8fafc;
-            color: #1f2937;
-            margin: 0;
-            padding: 2rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #1f2937;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-        .description {
-            text-align: center;
-            color: #6b7280;
-            margin-bottom: 2rem;
-        }
-
-        .guru-cards {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 1.5rem;
-            margin: 2rem 0;
-        }
-        .guru-card {
-            background: white;
-            border: 1px solid #e5e7eb;
-            border-radius: 12px;
-            padding: 1.5rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        .guru-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        }
-        .guru-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-        .guru-avatar {
-            font-size: 2.5rem;
-            margin-right: 1rem;
-        }
-        .guru-info h3 {
-            margin: 0 0 0.25rem 0;
-            color: #1f2937;
-            font-size: 1.25rem;
-        }
-        .guru-info p {
-            margin: 0;
-            color: #6b7280;
-            font-size: 0.875rem;
-        }
-        .guru-stats {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1rem;
-            margin: 1rem 0;
-        }
-        .stat {
-            text-align: center;
-            padding: 0.75rem;
-            background: #f9fafb;
-            border-radius: 8px;
-        }
-        .stat-value {
-            font-size: 1.125rem;
-            font-weight: 600;
-            color: #2563eb;
-            margin-bottom: 0.25rem;
-        }
-        .stat-label {
-            font-size: 0.75rem;
-            color: #6b7280;
-        }
-        .view-button {
-            display: block;
-            width: 100%;
-            background: #2563eb;
-            color: white;
-            text-align: center;
-            padding: 0.75rem;
-            border: none;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 500;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        .view-button:hover {
-            background: #1d4ed8;
-        }
-        .features {
-            margin: 2rem 0;
-        }
-        .features h3 {
-            color: #1f2937;
-            margin-bottom: 1rem;
-        }
-        .feature-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-        }
-        .feature-item {
-            display: flex;
-            align-items: flex-start;
-            padding: 1rem;
-            background: #f9fafb;
-            border-radius: 8px;
-        }
-        .feature-icon {
-            font-size: 1.25rem;
-            margin-right: 0.75rem;
-            margin-top: 0.125rem;
-        }
-        .feature-text {
-            flex: 1;
-        }
-        .feature-text h4 {
-            margin: 0 0 0.5rem 0;
-            color: #1f2937;
-            font-size: 0.875rem;
-            font-weight: 600;
-        }
-        .feature-text p {
-            margin: 0;
-            color: #6b7280;
-            font-size: 0.75rem;
-            line-height: 1.4;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>追踪投资大师的持仓变化</h1>
-        <p class="description">聚焦巴菲特和李录，展示最近3个季度的美股持仓变化</p>
-        
-        <!-- 投资大师卡片 -->
-        <div class="guru-cards">
-            <div class="guru-card">
-                <div class="guru-header">
-                    <div class="guru-avatar">🧙‍♂️</div>
-                    <div class="guru-info">
-                        <h3>沃伦·巴菲特</h3>
-                        <p>Berkshire Hathaway CEO</p>
-                    </div>
-                </div>
-                <div class="guru-stats">
-                    <div class="stat">
-                        <div class="stat-value">$3,500亿</div>
-                        <div class="stat-label">总市值</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-value">2024 Q3</div>
-                        <div class="stat-label">最新数据</div>
-                    </div>
-                </div>
-                <p style="color: #6b7280; font-size: 0.875rem; margin: 1rem 0;">
-                    股神巴菲特，价值投资的代表人物，以长期持有优质公司股票而闻名，凭借对企业内在价值的深入洞察和严格的投资纪律，带领伯克希尔·哈撒韦持续创造复利奇迹。
-                </p>
-                <button class="view-button" onclick="showHoldings('buffett')">查看持仓详情</button>
-            </div>
-
-            <div class="guru-card">
-                <div class="guru-header">
-                    <div class="guru-avatar">👨‍💼</div>
-                    <div class="guru-info">
-                        <h3>李录</h3>
-                        <p>Himalaya Capital 创始人</p>
-                    </div>
-                </div>
-                <div class="guru-stats">
-                    <div class="stat">
-                        <div class="stat-value">$40亿</div>
-                        <div class="stat-label">总市值</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-value">2024 Q3</div>
-                        <div class="stat-label">最新数据</div>
-                    </div>
-                </div>
-                <p style="color: #6b7280; font-size: 0.875rem; margin: 1rem 0;">
-                    价值投资大师，巴菲特的中国门徒，专注于中美两地的价值投资机会。
-                </p>
-                <button class="view-button" onclick="showHoldings('li-lu')">查看持仓详情</button>
-            </div>
-        </div>
-
-        <!-- 功能特性 -->
-        <div class="features">
-            <h3>平台特色功能</h3>
-            <div class="feature-list">
-                <div class="feature-item">
-                    <div class="feature-icon">📊</div>
-                    <div class="feature-text">
-                        <h4>实时持仓追踪</h4>
-                        <p>基于SEC 13F报告，追踪大师们的最新持仓变化</p>
-                    </div>
-                </div>
-                <div class="feature-item">
-                    <div class="feature-icon">📈</div>
-                    <div class="feature-text">
-                        <h4>趋势分析</h4>
-                        <p>展示最近3个季度的持仓变化趋势和投资偏好</p>
-                    </div>
-                </div>
-                <div class="feature-item">
-                    <div class="feature-icon">🤖</div>
-                    <div class="feature-text">
-                        <h4>AI智能摘要</h4>
-                        <p>AI分析持仓变化，生成易懂的投资洞察报告</p>
-                    </div>
-                </div>
-                <div class="feature-item">
-                    <div class="feature-icon">📱</div>
-                    <div class="feature-text">
-                        <h4>简洁易用</h4>
-                        <p>简报+图表的展示方式，降低理解门槛</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <p style="text-align: center; margin-top: 2rem; color: #6b7280; font-size: 0.875rem;">
-            © 2024 大师持仓追踪. 仅供参考，不构成投资建议。
-        </p>
-    </div>
-
-    <!-- 持仓详情模态框 -->
-    <div id="holdingsModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 10000;">
-        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 2rem; border-radius: 12px; max-width: 600px; width: 90%; max-height: 80%; overflow-y: auto;">
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem;">
-                <h2 id="modalTitle" style="margin: 0; color: #1f2937;">持仓详情</h2>
-                <button onclick="closeModal()" style="background: none; border: none; font-size: 1.5rem; cursor: pointer; color: #6b7280;">&times;</button>
-            </div>
-            <div id="modalContent">
-                <!-- 动态内容将在这里显示 -->
-            </div>
-        </div>
-    </div>
-
-    <script>
-        // 模拟持仓数据
-        const holdingsData = {
-            'buffett': {
-                name: '沃伦·巴菲特',
-                company: 'Berkshire Hathaway',
-                totalValue: '$3,500亿',
-                lastUpdate: '2024年Q3',
-                holdings: [
-                    { stock: 'Apple Inc. (AAPL)', value: '$174.3B', percentage: '49.8%', change: '+2.3%' },
-                    { stock: 'Bank of America (BAC)', value: '$31.7B', percentage: '9.1%', change: '-1.2%' },
-                    { stock: 'American Express (AXP)', value: '$25.1B', percentage: '7.2%', change: '+0.8%' },
-                    { stock: 'Coca-Cola (KO)', value: '$22.4B', percentage: '6.4%', change: '+1.5%' },
-                    { stock: 'Chevron (CVX)', value: '$18.6B', percentage: '5.3%', change: '-0.9%' }
-                ]
-            },
-            'li-lu': {
-                name: '李录',
-                company: 'Himalaya Capital',
-                totalValue: '$40亿',
-                lastUpdate: '2024年Q3',
-                holdings: [
-                    { stock: 'BYD Company (BYDDY)', value: '$12.8B', percentage: '32.0%', change: '+5.2%' },
-                    { stock: 'Alibaba (BABA)', value: '$8.4B', percentage: '21.0%', change: '-2.1%' },
-                    { stock: 'Tencent (TCEHY)', value: '$6.2B', percentage: '15.5%', change: '+1.8%' },
-                    { stock: 'Bank of America (BAC)', value: '$4.8B', percentage: '12.0%', change: '-0.5%' },
-                    { stock: 'Apple Inc. (AAPL)', value: '$3.6B', percentage: '9.0%', change: '+3.1%' }
-                ]
-            }
-        };
-
-        function showHoldings(guru) {
-            const data = holdingsData[guru];
-            if (!data) return;
-
-            document.getElementById('modalTitle').textContent = `${data.name} - 持仓详情`;
-
-            const content = `
-                <div style="margin-bottom: 1.5rem;">
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-bottom: 1rem;">
-                        <div style="text-align: center; padding: 1rem; background: #f9fafb; border-radius: 8px;">
-                            <div style="font-size: 1.25rem; font-weight: 600; color: #2563eb;">${data.totalValue}</div>
-                            <div style="font-size: 0.875rem; color: #6b7280;">总市值</div>
-                        </div>
-                        <div style="text-align: center; padding: 1rem; background: #f9fafb; border-radius: 8px;">
-                            <div style="font-size: 1.25rem; font-weight: 600; color: #2563eb;">${data.lastUpdate}</div>
-                            <div style="font-size: 0.875rem; color: #6b7280;">最新数据</div>
-                        </div>
-                    </div>
-                </div>
-
-                <h3 style="margin: 1.5rem 0 1rem 0; color: #1f2937;">前五大持仓</h3>
-                <div style="space-y: 0.75rem;">
-                    ${data.holdings.map(holding => `
-                        <div style="display: flex; justify-content: space-between; align-items: center; padding: 0.75rem; background: #f9fafb; border-radius: 8px; margin-bottom: 0.75rem;">
-                            <div style="flex: 1;">
-                                <div style="font-weight: 500; color: #1f2937; margin-bottom: 0.25rem;">${holding.stock}</div>
-                                <div style="font-size: 0.875rem; color: #6b7280;">${holding.percentage} 占比</div>
-                            </div>
-                            <div style="text-align: right;">
-                                <div style="font-weight: 600; color: #1f2937;">${holding.value}</div>
-                                <div style="font-size: 0.875rem; color: ${holding.change.startsWith('+') ? '#10b981' : '#ef4444'};">${holding.change}</div>
-                            </div>
-                        </div>
-                    `).join('')}
-                </div>
-
-                <div style="margin-top: 1.5rem; padding: 1rem; background: #fef3c7; border-radius: 8px; border-left: 4px solid #f59e0b;">
-                    <p style="margin: 0; font-size: 0.875rem; color: #92400e;">
-                        <strong>数据说明：</strong> 基于最新SEC 13F报告，数据可能有45天延迟。仅供参考，不构成投资建议。
-                    </p>
-                </div>
-            `;
-
-            document.getElementById('modalContent').innerHTML = content;
-            document.getElementById('holdingsModal').style.display = 'block';
-        }
-
-        function closeModal() {
-            document.getElementById('holdingsModal').style.display = 'none';
-        }
-
-        // 点击模态框外部关闭
-        document.getElementById('holdingsModal').addEventListener('click', function(e) {
-            if (e.target === this) {
-                closeModal();
-            }
-        });
-
-        // ESC键关闭模态框
-        document.addEventListener('keydown', function(e) {
-            if (e.key === 'Escape') {
-                closeModal();
-            }
-        });
-    </script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Guru Holdings Tracker</title>
+    <meta
+      name="description"
+      content="Track Warren Buffett and Li Lu portfolio changes over the latest four quarters with localized insights, charts, and AI commentary."
+    />
+    <meta property="og:title" content="Guru Holdings Tracker" />
+    <meta
+      property="og:description"
+      content="Follow guru investors with quarterly holdings, portfolio charts, and localized AI highlights."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.guruholdings.net/" />
+    <meta property="og:locale" content="en_US" />
+    <link rel="canonical" href="https://www.guruholdings.net/" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
