--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guru Holdings Tracker</title>
+    <title>Guru Holdings Tracker111</title>
     <meta
       name="description"
       content="Track Warren Buffett and Li Lu portfolio changes over the latest four quarters with localized insights, charts, and AI commentary."
