--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guru Holdings Tracker111</title>
+    <title>Guru Holdings Tracker</title>
     <meta
       name="description"
       content="Track Warren Buffett and Li Lu portfolio changes over the latest four quarters with localized insights, charts, and AI commentary."
@@ -17,9 +17,12 @@
     <meta property="og:url" content="https://www.guruholdings.net/" />
     <meta property="og:locale" content="en_US" />
     <link rel="canonical" href="https://www.guruholdings.net/" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
   </head>
   <body>
+    <noscript>
+      <strong>请启用 JavaScript 以查看 Guru Holdings Tracker 的完整内容。</strong>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
