--- a/index.html
+++ b/index.html
@@ -169,6 +169,6 @@
         })
       })()
     </script>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
